<resources>
    <string name="app_name">BusyBudgeter</string>
    <string name="login_empty">Both username and password must be filled</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_password_repeat">New password can not be the same as the previous one.</string>
</resources>
